--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,56 @@
 :root
 {background-color: rgb(252, 211, 148);
 color: rgb(7, 118, 118);
-font-family: fantasy;
+font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
 }
 h1 {
     color: maroon;
     margin-left: 40px;
+    padding: .5rem;
+    font-family: "Space Mono", monospace;
+    font-weight: 400;
+    .  font-style: normal;
+  }
+  h2 {
+    color: rgba(164, 3, 162, 0.957);
+    font-weight: 5px;
+    margin-left: 40px;
+    padding: .5rem;
+  }
+  section{
+    padding: .5rem;
+    margin: 2px;
+  }
+  #Experience ul li{
+    list-style: circle;
+  }
+  .fa {
+    padding: 25px;
+    font-size: 40px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px;
+    margin-top: auto;
+    border-top: 25px;
+    border-radius: 50%;
+    height: 30px;
+  }
+  .fa:hover {
+    opacity: 0.7;
+}
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+  }
+  .fa-twitter {
+    background: #dd4b39;
+    color: white;
+  }
+  .fa-github {
+    background: #ffffff;
+    color: rgb(0, 0, 0);
   }
