--- a/css/index.css
+++ b/css/index.css
@@ -1,56 +1,151 @@
-:root
-{background-color: rgb(252, 211, 148);
-color: rgb(7, 118, 118);
-font-family: "Lora", serif;
-  font-optical-sizing: auto;
-  font-weight: 700;
-  font-style: normal;
-}
-h1 {
+:root {
+    background-color: rgb(252, 211, 148);
+    color: rgb(7, 118, 118);
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  h1 {
     color: maroon;
-    margin-left: 40px;
-    padding: .5rem;
+    padding: .5vw;
     font-family: "Space Mono", monospace;
     font-weight: 400;
-    .  font-style: normal;
+    font-style: normal;
+    text-align: center;
   }
+  
   h2 {
     color: rgba(164, 3, 162, 0.957);
     font-weight: 5px;
-    margin-left: 40px;
-    padding: .5rem;
+    margin: 0;
+    padding: .5vw;
   }
-  section{
+  #Nav {
+    text-align: center;
+    position: sticky; 
+    top: 0;
+    background-color: rgba(245, 245, 220, 0.484);
+    padding: .2em;
+    width: 100%; 
+    border-radius: 40%;
+}
+
+#Nav ul {
+    display: flex;
+    justify-content: flex-start; 
+    padding: 0; 
+    margin: 0; 
+}
+
+#Nav ul li {
+    list-style: none;  
+    margin: 0.5rem;
+    padding: 0.5rem;
+    font-size: 1.2rem; 
+    border-radius: 50%; 
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+    text-align: center;
+    width: 100%;
+}
+
+#Nav ul li a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#Nav ul li:hover {
+    opacity: 0.7;
+}
+
+  section {
     padding: .5rem;
     margin: 2px;
   }
-  #Experience ul li{
-    list-style: circle;
-  }
-  .fa {
-    padding: 25px;
-    font-size: 40px;
-    width: 50px;
+  
+  #Experience ul {
+    list-style: none; /* Remove default list styling */
+    padding: 0; /* Remove padding */
+    margin: 0; /* Remove margin */
+}
+
+#Experience ul li {
+    display: flex; /* Apply flexbox to each list item */
+    flex-direction: column; /* Stack title and description vertically */
+    margin-bottom: 1.5rem; /* Add space between jobs */
+}
+
+.job-container {
+    display: flex; /* Apply flexbox to the job container */
+    justify-content: space-between; /* Spread title and date apart */
+    align-items: center; /* Align items vertically in the center */
+}
+
+.job-title {
+    font-weight: bold; /* Make job title bold */
+    flex-basis: 70%; /* Allow the title to take up 70% of space */
+}
+
+.job-date {
+    flex-basis: 30%; /* Allow the date to take up 30% of space */
+    text-align: right; /* Align the date to the right */
+}
+
+.job-description {
+    margin-top: 0.5rem; /* Add a little space above the description */
+    font-style: italic; /* Style description text as italic */
+}
+
+#Connect ul{
+    display: flex;
+    justify-content:left;
+    padding: 0;
+    flex-direction: column;
+}  
+.fa {
+    padding: 1em;
+    font-size: 2rem;
+    width: 4rem;
     text-align: center;
     text-decoration: none;
-    margin: 5px;
-    margin-top: auto;
-    border-top: 25px;
+    margin: 0.5em;
     border-radius: 50%;
-    height: 30px;
-  }
+}
+
+@media (min-width: 768px) {
+    .fa {
+        font-size: 3rem; /* Increase font size on larger screens */
+        width: 5rem;
+    }
+}
+
+@media (min-width: 1024px) {
+    .fa {
+        font-size: 4rem; /* Further increase font size on even larger screens */
+        width: 6rem;
+    }
+}
+
+  
   .fa:hover {
     opacity: 0.7;
-}
-.fa-linkedin {
+  }
+  
+  .fa-linkedin {
     background: #007bb5;
     color: white;
   }
+  
   .fa-twitter {
     background: #dd4b39;
     color: white;
   }
+  
   .fa-github {
     background: #ffffff;
     color: rgb(0, 0, 0);
   }
+  
