--- a/css/index.css
+++ b/css/index.css
@@ -67,36 +67,45 @@
   }
   
   #Experience ul {
-    list-style: none; /* Remove default list styling */
-    padding: 0; /* Remove padding */
-    margin: 0; /* Remove margin */
+    list-style: none; 
+    padding: 0; 
+    margin: 0; 
 }
 
 #Experience ul li {
-    display: flex; /* Apply flexbox to each list item */
+    display: flex; 
     flex-direction: column; /* Stack title and description vertically */
-    margin-bottom: 1.5rem; /* Add space between jobs */
+    margin-bottom: 1.5rem; 
 }
-
+.facts{
+    font-size: 1.5rem;
+    padding: 20px;
+    font-weight: bold;
+    color:rgb(137, 3, 220)
+}
+.facts li{
+    margin: 0.3rem;
+    font-size: 1rem;
+}
 .job-container {
-    display: flex; /* Apply flexbox to the job container */
-    justify-content: space-between; /* Spread title and date apart */
-    align-items: center; /* Align items vertically in the center */
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
 }
 
 .job-title {
-    font-weight: bold; /* Make job title bold */
+    font-weight: bold; /* updated */
     flex-basis: 70%; /* Allow the title to take up 70% of space */
 }
 
 .job-date {
-    flex-basis: 30%; /* Allow the date to take up 30% of space */
-    text-align: right; /* Align the date to the right */
+    flex-basis: 33%; /* updated */
+    text-align: right; /* keeps texts on right side */
 }
 
 .job-description {
-    margin-top: 0.5rem; /* Add a little space above the description */
-    font-style: italic; /* Style description text as italic */
+    margin-top: 0.5rem; 
+    font-style: italic; 
 }
 
 #Connect ul{
@@ -117,14 +126,14 @@
 
 @media (min-width: 768px) {
     .fa {
-        font-size: 3rem; /* Increase font size on larger screens */
+        font-size: 3rem; /* tablet sizing */
         width: 5rem;
     }
 }
 
 @media (min-width: 1024px) {
     .fa {
-        font-size: 4rem; /* Further increase font size on even larger screens */
+        font-size: 4rem; /* computer sizing */
         width: 6rem;
     }
 }
